--- a/laussel/Makefile
+++ b/laussel/Makefile
@@ -15,7 +15,7 @@ NAME = webserv
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRCS = main.cpp Request.cpp
+SRCS = main.cpp Request.cpp Response.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
